@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-15T01:18:11Z",
+  "timestamp" : "2022-11-15T08:20:55Z",
   "count_outdated" : 661,
   "uniques_outdated" : 375,
-  "count" : 678,
-  "uniques" : 383,
+  "count" : 680,
+  "uniques" : 385,
   "clones" : [
     {
       "timestamp": "2022-11-01T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -53,6 +53,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-15T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
