@@ -1,3 +1,11 @@
+2022-11-15T08:20:55Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3468656360 # 1030
+* notice: last 14d: unq all: 6 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 375 661 / 383 678
+* notice: next accum: outdated-unq outdated-all / unq all: 375 661 / 385 680
+* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -1 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2022-11-01 2022-11-15]
+
 2022-11-15T01:18:11Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3466591789 # 1029
 * notice: last 14d: unq all: 5 17
